--- a/src/assets/css/components/header.scss
+++ b/src/assets/css/components/header.scss
@@ -1,3 +1,6 @@
+@import "../lib/lato.scss";
+@import "../lib/config.scss";
+
 .header,
 .header-logo,
 .header-buttons {
@@ -9,7 +12,7 @@
 .header {
   width: calc(100% - 20px);
   height: 50px;
-  background-color: gray;
+  background: linear-gradient(0.25turn, $c-black2, $c-black3);
   padding: 0 10px;
   &-logo {
     img {
@@ -32,11 +35,17 @@
       width: 120px;
       height: 35px;
       margin: 0 10px;
-      background-color: black;
-      color: white;
+      color:$c-white;
+      font-family: $f-lato;
       border: none;
       border-radius: 5px;
       outline: 0;
+      &#create-event {
+        background-color: $c-secondaryLight;
+      }
+      &#login {
+        background-color: $c-primary;
+      }
       &:hover {
         cursor: pointer;
       }
