[LISTS] lists about upcoming events and communities ready

--- a/src/assets/css/lib/config.scss
+++ b/src/assets/css/lib/config.scss
@@ -1,13 +1,13 @@
 //FONTS
 
-$f-lato: 'Lato', sans-serif;
-$f-latoBold: 'Lato bold', sans-serif;
-$f-latoLight: 'Lato light', sans-serif;
-$f-latoItalic: 'Lato italic', cursive;
-$f-monserrat: 'Monserrat', sans-serif;
-$f-monserratBold: 'Monserrat bold', sans-serif;
-$f-monserratLight: 'Monserrat light', sans-serif;
-$f-monserratItalic: 'Monserrat italic', cursive;
+$f-lato: "Lato", sans-serif;
+$f-latoBold: "Lato bold", sans-serif;
+$f-latoLight: "Lato light", sans-serif;
+$f-latoItalic: "Lato italic", cursive;
+$f-monserrat: "Monserrat", sans-serif;
+$f-monserratBold: "Monserrat bold", sans-serif;
+$f-monserratLight: "Monserrat light", sans-serif;
+$f-monserratItalic: "Monserrat italic", cursive;
 
 //COLORS
 $c-primary: rgba(0, 171, 211, 1);
@@ -24,6 +24,7 @@ $c-white1: rgba(252, 252, 254, 1);
 $c-white2: rgba(246, 246, 246, 1);
 $c-white3: rgba(240, 240, 240, 1);
 $c-gray: rgba(165, 161, 161, 1);
-$c-shadow: rgba(0, 0, 0, .16);
+$c-grayLight: hsl(0, 0%, 89%);
+$c-shadow: rgba(0, 0, 0, 0.16);
 $c-positive: rgba(216, 0, 127, 1);
 $c-positiveLight: rgba(207, 58, 146, 1);
