[EVENTS] hero of landing ready

--- a/src/interface/components/layout.pug
+++ b/src/interface/components/layout.pug
@@ -6,5 +6,6 @@ html(lang="en")
     title Omega Meetups
   body
     include header.pug
+    include headerEvent.pug
     include listInfo.pug
     block content
